crates/rome_js_formatter/tests/specs/prettier/js/sloppy-mode/function-declaration-in-if.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
if (false) function foo(){}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1 +1 @@
-if (false) function foo() {}
+if (false) function foo(){}
```

# Output

```js
if (false) function foo(){}
```


# Errors
```
error[SyntaxError]: In strict mode code, functions can only be declared at top level or inside a block
  ┌─ function-declaration-in-if.js:1:12
  │
1 │ if (false) function foo(){}
  │            ^^^^^^^^^^^^^^^^ wrap the function in a block statement


```


